--- a/.gitignore
+++ b/.gitignore
@@ -210,6 +210,8 @@ pickle-email-*.html
 /.bundle
 /vendor/bundle
 
+.idea
+
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
@@ -225,3 +227,5 @@ pickle-email-*.html
 
 # Ignore node_modules
 node_modules/
+/.env
+/unit.xml
