--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.24",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
